# tuning-sketchbook

./: LICENSE  README.md  make_sfz.py  split_audio_files.py  stack.yaml  tuning.cabal  tuning.py
src/: Main.hs  make_sfz.hs  split_audio.hs
test_files/: Untitled.aif  ji-sampler.sfz  test.mid
