name:                tuning
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/tuning#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tuning
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       midi == 0.2.2.1,
                       event-list == 0.1.1.3,
                       bytestring == 0.10.8.1,
                       utility-ht == 0.0.12,
                       transformers == 0.5.2.0,
                       HCodecs >= 0.5,
                       turtle >= 1.2.8,
                       directory >= 1.2.6.2,
                       foldl >= 1.2.1,
                       text >= 1.2.2.1,
                       filepath >= 1.4.1
